syntax = "proto3";

option go_package = "itemService/pb";
package pb;

service ItemService {
  rpc deleteItem(DeleteItemReq) returns (DeleteItemRes){}
  rpc addItem(AddItemReq) returns (AddItemRes){}
  rpc getItemList(GetItemListReq) returns (GetItemListRes){}
}

message DeleteItemReq {
  int32 userId = 1;
  int64 itemId = 2;
  int64 shopId = 3;
}

message DeleteItemRes {
  int32 errorCode = 1;
  string errorMsg = 2;
}

message AddItemReq {
  int32 userId = 1;
  int64 itemId = 2;
  int64 shopId = 3;
}

message AddItemRes {
  int32 errorCode = 1;
  string errorMsg = 2;
  Item item = 3;
}

message Item {
  string name = 1;
  uint32 price = 2;
}

message GetItemListReq {
  int32 userId = 1;
  int32 page = 2;
}

message GetItemListRes {
  int32 errorCode = 1;
  string errorMsg = 2;
  repeated Item items = 3;
  int32 totalPages = 4;
}