syntax = "proto3";

option go_package = "userService/pb";
package pb;

service UserService {
  rpc signup(SignupReq) returns (SignupRes){}
  rpc login(LoginReq) returns (LoginRes){}
}

message SignupReq {
  string username = 1;
  string password = 2;
}

message SignupRes {
  int32 errorCode =  1;
  string errorMsg =  2;
}

message LoginReq {
  string username = 1;
  string password = 2;
}

message LoginRes {
  int32 errorCode = 1;
  string errorMsg = 2;
}